--- a/S431 Final Presentation.Rmd
+++ b/S431 Final Presentation.Rmd
@@ -413,6 +413,7 @@ $$
 aut <- subset(kki, kki$PrimaryDiagnosis == "Autism")
 lm.aut <- lm(Standard ~ mABC_AimingAndCatching.Component.StandardScore + mABC_Balance.Component.StandardScore + EdinburghHandedness_Integer + GAI + ADHD_Subtype + Gender + mABC_AGE, data = aut)
 lm.aut.basic <- lm(SRS_TotalRawScore ~ mABC_AimingAndCatching.Component.StandardScore + mABC_Balance.Component.StandardScore, data = aut)
+summary(lm.aut)
 ```
 
 $$
@@ -451,7 +452,7 @@ qqline(lm.aut$residuals, col = 'red')
 ```
 
 ```{r}
-student.lmaut <- standardize(lm.aut)
+student.lmaut <- studentize(lm.aut)
 leverage.lmaut <- lm.influence(lm.aut)$hat
-ggplot(data = NULL,aes(x = leverage.lmaut, y = student.lmaut)) + geom_point() + geom_hline( yintercept = 0)
+ggplot(data = NULL, aes(x = leverage.lmaut, y = student.lmaut)) + geom_point() + geom_hline(yintercept = 0)
 ```
