--- a/S431 Final Presentation.Rmd
+++ b/S431 Final Presentation.Rmd
@@ -451,7 +451,7 @@ qqline(lm.aut$residuals, col = 'red')
 ```
 
 ```{r}
-student.lmaut <- standardize(lm.aut)
-leverage.lmaut <- lm.influence(lm.aut)$hat
+student.lmaut <- studentize(lm.aut)
+leverage.lmaut <- influence(lm.aut)$hat
 ggplot(data = NULL,aes(x = leverage.lmaut, y = student.lmaut)) + geom_point() + geom_hline( yintercept = 0)
 ```
